force-app/main/default/src/objects/HealthCloudGA__HL7ParserMapping__mdt/HealthCloudGA__HL7ParserMapping__mdt.object-meta.xml
<CustomObject>
    <description>Specifies which Apex class is used to parse each type of HL7 segment</description>
    <label>HL7 Parser Mapping</label>
    <pluralLabel>HL7 Parser Mappings</pluralLabel>
</CustomObject>