force-app/main/default/src/objects/HealthCloudGA__HL7ParserMapping__mdt/fields/HealthCloudGA__ParserName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ParserName__c</fullName>
    <inlineHelpText>Apex class name to be used to parse</inlineHelpText>
    <label>Parser Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>