force-app/main/default/src/objects/HealthCloudGA__HL7ParserMapping__mdt/fields/HealthCloudGA__ReceivingApplication__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ReceivingApplication__c</fullName>
    <label>Receiving Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>