force-app/main/default/src/objects/HealthCloudGA__HL7ParserMapping__mdt/fields/HealthCloudGA__ReceivingFacility__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ReceivingFacility__c</fullName>
    <label>Receiving Facility</label>
    <length>100</length>
    <type>Text</type>
</CustomField>