force-app/main/default/src/objects/HealthCloudGA__HL7ParserMapping__mdt/fields/HealthCloudGA__SendingFacility__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SendingFacility__c</fullName>
    <label>Sending Facility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>