force-app/main/default/src/objects/HealthCloudGA__HL7ParserMapping__mdt/fields/HealthCloudGA__Version__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Version__c</fullName>
    <label>Version</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>